crates/karva_benchmark/src/bin/snapshots/karva_benchmark__tests__markdown_report_renders_memory_improvements.snap
---
source: crates/karva_benchmark/src/bin/karva_benchmark.rs
expression: markdown
---
<!-- karva-memory-benchmark-comparison -->
### Merging this PR reduces memory usage

<details>
<summary>All benchmark scores</summary>

|  | Mode | Benchmark | Base | Head | Change | Runs |
| --- | --- | --- | ---: | ---: | ---: | ---: |
| :zap: | Memory | `memory-project` | 97.7 MiB | 87.9 MiB | -10.0% | 21 |

</details>
