crates/karva_benchmark/src/bin/snapshots/karva_benchmark__tests__markdown_report_renders_unchanged_results.snap
---
source: crates/karva_benchmark/src/bin/karva_benchmark.rs
expression: markdown
---
<!-- karva-benchmark-comparison -->
### Merging this PR will not alter performance

<details>
<summary>All benchmark scores</summary>

|  | Mode | Benchmark | Base | Head | Change | Runs |
| --- | --- | --- | ---: | ---: | ---: | ---: |
| :white_check_mark: | WallTime | `flat-project` | 1.000 s | 1.004 s | +0.4% | 21 |

</details>
